[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-diff-strings"
version = "0.2.0"
description = "Show character-level differences between two strings with colored terminal output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["diff", "string", "compare", "character", "terminal", "color"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-diff-strings#readme"
Repository = "https://github.com/philiprehberger/py-diff-strings"
Issues = "https://github.com/philiprehberger/py-diff-strings/issues"
Changelog = "https://github.com/philiprehberger/py-diff-strings/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_diff_strings"]
